<resources>
    <string name="app_name" translatable="false">VocaBuilder</string>
    <string name="birthdate_hint">DD.MM.YYYY</string>
    <string name="birthdate_label">Birth date</string>
    <string name="change_password_text">Change password</string>
    <string name="check_form_text">Please make sure the form is filled out correctly</string>
    <string name="current_pwd_hint">Your current password</string>
    <string name="current_pwd_label">Current password</string>
    <string name="email_hint">example@mail.com</string>
    <string name="email_label" translatable="false">Email</string>
    <string name="first_name_label">First name</string>
    <string name="have_account_text">Already have an account?</string>
    <string name="image_fullscreen">Full screen image</string>
    <string name="keep_logged_text">(keep logged in)</string>
    <string name="last_name_label">Last name</string>
    <string name="login_box_hint">Your username</string>
    <string name="login_button_text">Sign In</string>
    <string name="login_failure_text">Error while user login.\n Try again later</string>
    <string name="login_header_text">Authenticate</string>
    <string name="login_hint">At least 3 up to 20 chars long</string>
    <string name="login_label">Login</string>
    <string name="login_link"><u>Sign in here</u></string>
    <string name="login_success_text">Welcome, %1$s!</string>
    <string name="logout_text">Log out</string>
    <string name="menu_profile_label">Profile</string>
    <string name="menu_settings_label">Settings</string>
    <string name="menu_stats_label">Statistics</string>
    <string name="menu_decks_label">Decks</string>
    <string name="name_hint">No more than 30 chars</string>
    <string name="new_pwd_label">New password</string>
    <string name="no_account_text">Don\'t have an account yet?</string>
    <string name="not_empty_form_text">All fields must be filled</string>
    <string name="password_box_hint">Your password</string>
    <string name="password_hint">At least 10 chars incl. upper and lowercase letters, numbers and special symbols</string>
    <string name="password_label">Password</string>
    <string name="pass_repeat_hint">Confirm your password</string>
    <string name="pass_repeat_label">Password (repeat)</string>
    <string name="phone_hint" translatable="false">+7(921)234-56-78</string>
    <string name="phone_label">Phone</string>
    <string name="register_button_text">Register</string>
    <string name="register_header_text">Register</string>
    <string name="register_failure_text">Error while user registering.\n Try again later</string>
    <string name="register_link"><u>Register here</u></string>
    <string name="register_success_text">Registration completed successfully.\n Please, log in\n with your credentials</string>
    <string name="remember_label">Remember me</string>
    <string name="registered_label">Register date</string>
    <string name="repeat_pwd_label">Repeat password</string>
    <string name="reset_button_text">Reset</string>
    <string name="retry_text">Retry</string>
    <string name="toggle_pwd_desc">Toggle visibility</string>
    <string name="user_not_found_text">User not found</string>
    <string name="wrong_password_text">Wrong password</string>
    <integer name="type_date" translatable="false">20
    </integer> <!-- InputType.TYPE_CLASS_DATETIME (4) or InputType.TYPE_DATETIME_VARIATION_DATE (16) -->
    <integer name="type_email" translatable="false">33
    </integer> <!-- InputType.TYPE_CLASS_TEXT (1) or InputType.TYPE_TEXT_VARIATION_EMAIL_ADDRESS (32) -->
    <integer name="type_password" translatable="false">129
    </integer> <!-- InputType.TYPE_CLASS_TEXT (1) or InputType.TYPE_TEXT_VARIATION_PASSWORD (128) -->
    <integer name="type_phone" translatable="false">3</integer> <!-- TYPE_CLASS_PHONE (3) -->
</resources>
