<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ProfileFragment">

    <com.devpm.vocabuilder.views.TextEditableView
        android:id="@+id/loginView"
        app:label="@string/login_label"
        app:hint="@string/login_hint"
        style="@style/FormItem"
        />
    <com.devpm.vocabuilder.views.TextEditableView
        android:id="@+id/firstNameView"
        app:label="@string/first_name_label"
        app:hint="@string/name_hint"
        app:nullable="true"
        style="@style/FormItem"
        />
    <com.devpm.vocabuilder.views.TextEditableView
        android:id="@+id/lastNameView"
        app:label="@string/last_name_label"
        app:hint="@string/name_hint"
        app:nullable="true"
        style="@style/FormItem"
        />
    <com.devpm.vocabuilder.views.TextEditableView
        android:id="@+id/birthdateView"
        app:label="@string/birthdate_label"
        app:hint="@string/birthdate_hint"
        app:nullable="true"
        app:type="@integer/type_date"
        style="@style/FormItem"
        />
    <com.devpm.vocabuilder.views.TextEditableView
        android:id="@+id/emailView"
        app:label="@string/email_label"
        app:hint="@string/email_hint"
        app:nullable="true"
        app:type="@integer/type_email"
        style="@style/FormItem"
        />
    <com.devpm.vocabuilder.views.TextEditableView
        android:id="@+id/phoneView"
        app:label="@string/phone_label"
        app:hint="@string/phone_hint"
        app:nullable="true"
        app:type="@integer/type_phone"
        style="@style/FormItem"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/FormItem"
        >
        <TextView
            android:id="@+id/label"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:paddingVertical="5dp"
            android:layout_marginTop="2dp"
            android:text="@string/registered_label"
            android:textFontWeight="500"
            style="@style/BaseLabel.FormLabel"
            />
        <TextView
            android:id="@+id/textVal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="end"
            android:text="20.08.2025"
            android:paddingVertical="7dp"
            android:paddingEnd="10dp"
            android:textSize="20sp"
            android:fontFamily="sans-serif-condensed"
            />
    </LinearLayout>

    <com.devpm.vocabuilder.views.TextEditView
        android:id="@+id/passwordView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginView"
        app:label="@string/current_pwd_label"
        app:hint="@string/current_pwd_hint"
        app:toggleable="true"
        app:type="@integer/type_password"
        style="@style/FormItem"
        />
    <com.devpm.vocabuilder.views.TextEditView
        android:id="@+id/newPwdView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginView"
        app:label="@string/new_pwd_label"
        app:hint="@string/password_hint"
        app:toggleable="true"
        app:type="@integer/type_password"
        style="@style/FormItem"
        />
    <com.devpm.vocabuilder.views.TextEditView
        android:id="@+id/pwdRepeatView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordView"
        app:label="@string/repeat_pwd_label"
        app:hint="@string/pass_repeat_hint"
        app:toggleable="true"
        app:type="@integer/type_password"
        style="@style/FormItem"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/updatePwdBtn"
        android:background="@drawable/button_bg"
        android:backgroundTint="@color/greenBright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_password_text"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/BaseButton.FormButton"
        />

</LinearLayout>
